--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -5,7 +5,7 @@ app.login=Войти
 app.logout=Выйти
 app.profile=профиль
 app.register=Регистрация
-app.registered=Вы загеристрированы. Введите ваш логин/пароль.
+app.registered=Вы успешно зарегистрированы! Введите ваш логин/пароль.
 app.feedback=Обратная связь
 app.news=Новости проекта
 app.shows=Последнее шоу
@@ -13,12 +13,16 @@ app.shows=Последнее шоу
 users.title=Список пользователей
 users.edit=Редактировать пользователя
 users.add=Добавить пользователя
-users.name=Имя
+users.nick=Ник
+users.firstName=Имя
+users.lastName=Фамилия
 users.email=Почта
+users.address=Адрес
 users.roles=Роли
 users.active=Активный
 users.registered=Зарегистрирован
 users.password=Пароль
+users.dPassword=Повторите пароль
 users.deleted=Пользователь удалён
 
 menu.main=Главная
