Jquery, AJAX, авторизация

--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -1,14 +1,19 @@
 app.title=Электронное солнце
-app.home=Главная
 app.footer=ELECTRON SUN
 app.login=Войти
 app.logout=Выйти
-app.profile=профиль
+app.authorize=Авторизация пользователя
+app.profile=Профиль пользователя
+app.save=Сохранить
+app.cancel=Отмена
 app.register=Регистрация
+app.registerUser=Регистрация пользователя
 app.registered=Вы успешно зарегистрированы! Введите ваш логин/пароль.
+app.notpass=Забыли пароль?
 app.feedback=Обратная связь
 app.news=Новости проекта
 app.shows=Последнее шоу
+app.admin=Админ панель
 
 users.title=Список пользователей
 users.edit=Редактировать пользователя
@@ -29,7 +34,7 @@ menu.main=Главная
 menu.project=О проекте
 menu.play=Проигрыватель
 menu.lightShow=Создать световое шоу
-menu.device=Прибор
+menu.device=Светильник
 
 
 common.select=Выбрать
