user.jsp completed

--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -13,7 +13,10 @@ app.notpass=Забыли пароль?
 app.feedback=Обратная связь
 app.news=Новости проекта
 app.shows=Последнее шоу
-app.admin=Админ панель
+
+admin.user=Пользователи
+admin.device=Светильники
+admin.product=Продукт
 
 users.title=Список пользователей
 users.edit=Редактировать пользователя
@@ -28,7 +31,7 @@ users.active=Активный
 users.registered=Зарегистрирован
 users.password=Пароль
 users.dPassword=Повторите пароль
-users.deleted=Пользователь удалён
+users.deleted=Удалён
 
 menu.main=Главная
 menu.project=О проекте
@@ -49,5 +52,9 @@ common.enabled=Активирован
 common.disabled=Деактивирован
 common.failed=Ошибка
 common.add=Добавить
+
+filter.not=Без удалённых
+filter.desable=Показать только заблокированных
+filter.deleted=Показать только удалённых
 
 exception.duplicate_email=Пользователь с такой почтой уже существует.
