remember-me and защита методов

--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -32,6 +32,7 @@ users.registered=Зарегистрирован
 users.password=Пароль
 users.dPassword=Повторите пароль
 users.deleted=Удалён
+users.rememberme=Запомнить
 
 menu.main=Главная
 menu.project=О проекте
