datatables add product

--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -15,7 +15,7 @@ app.news=Новости проекта
 app.shows=Последнее шоу
 
 admin.user=Пользователи
-admin.device=Светильники
+admin.device=Приборы
 admin.product=Продукт
 
 users.title=Список пользователей
@@ -38,7 +38,7 @@ menu.main=Главная
 menu.project=О проекте
 menu.play=Проигрыватель
 menu.lightShow=Создать световое шоу
-menu.device=Светильник
+menu.device=Приборы
 
 
 common.select=Выбрать
@@ -59,3 +59,15 @@ filter.desable=Показать только заблокированных
 filter.deleted=Показать только удалённых
 
 exception.duplicate_email=Пользователь с такой почтой уже существует.
+
+product.caption=Добавить новый продукт
+product.title=Продукт
+product.name=Название
+product.description=Описание
+product.price=Цена
+product.discount=Скидка (%)
+product.discountPrice=Цена со скидкой
+product.maxLed=Кол-во светодиодов в приборе
+
+
+
