add admin device

--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -61,6 +61,7 @@ filter.deleted=Показать только удалённых
 exception.duplicate_email=Пользователь с такой почтой уже существует.
 
 product.caption=Добавить новый продукт
+product.select=Выберите продукт
 product.title=Продукт
 product.name=Название
 product.description=Описание
@@ -69,5 +70,10 @@ product.discount=Скидка (%)
 product.discountPrice=Цена со скидкой
 product.maxLed=Кол-во светодиодов в приборе
 
-
+device.caption=Добавить новый прибор
+device.product=Продукт
+device.maxLed=Кол-во светодиодов в приборе
+device.enabled=Подключён к программе
+device.uuid=Серийный номер
+device.user=Ник пользователя
 
