--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -38,7 +38,11 @@ menu.main=Главная
 menu.project=О проекте
 menu.play=Проигрыватель
 menu.lightShow=Создать световое шоу
+menu.create=Создать
+menu.open=Открыть
+menu.remix=Ремикс
 menu.device=Приборы
+menu.help=Помощь
 
 
 common.select=Выбрать
@@ -76,4 +80,11 @@ device.maxLed=Кол-во светодиодов в приборе
 device.enabled=Подключён к программе
 device.uuid=Серийный номер
 device.user=Ник пользователя
+device.name=Название
+device.description=Примечание
+device.register=Зарегистрирован
 
+
+lightShow.device=Мои приборы
+lightShow.show=Мои шоу
+lightShow.order=Мои заказы
