create body-right.jsp and botton

--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -41,7 +41,7 @@ menu.lightShow=Создать световое шоу
 menu.create=Создать
 menu.open=Открыть
 menu.remix=Ремикс
-menu.device=Приборы
+menu.device=Светильники
 menu.help=Помощь
 
 
@@ -84,7 +84,11 @@ device.name=Название
 device.description=Примечание
 device.register=Зарегистрирован
 
-
 lightShow.device=Мои приборы
 lightShow.show=Мои шоу
 lightShow.order=Мои заказы
+lightShow.name=Название
+lightShow.remix=Это шоу ремикс
+lightShow.remixes=Задействовано в ремиксах
+lightShow.audio=Название музыки
+lightShow.public=Опубликовать
